# django-admin-media

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
admin_media_preview/: asgi.py  settings.py  urls.py  wsgi.py
media_preview/: apps.py  constants.py  preview.py
media_preview/templates/media_preview/widgets/: preview_file_input.html
