[tool.poetry]
name = "django-admin-media"
version = "1.0.0"
description = "displays a preview of media files in the Django admin"
authors = ["lovvskillz <14542790+lovvskillz@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "django_admin_media"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.3"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pre-commit = "^3.3.3"
pytest = "^7.4.0"
ruff = "^0.0.278"

[tool.black]
line-length = 88
preview = true
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | frontend
)/
'''

[tool.ruff]
line-length = 88
ignore = ["E501"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
